nav overflow fix
- overflow-y: scroll to avoid bug in scrolling

!! - nav is now the same in all pages

--- a/css/admin_css/style_adminNav.css
+++ b/css/admin_css/style_adminNav.css
@@ -40,11 +40,18 @@
   font-style: normal;
 
 }
+
+*{
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
   
 body{  
   font-size: 100%;
   margin: 0;
   padding: 0;
+  overflow-y: scroll;
 }
 
 nav {
